Updated volunteer search form

--- a/volunteerSearch.html
+++ b/volunteerSearch.html
@@ -11,85 +11,80 @@
 
 <body>
   <div class="container">
-  <div class="header">
-    <a class="button" id="btnHome" href="index.html">Home</a>
-    <h1 class="text-center">Volunteer Opportunities</h1>
-      <hr/>
-  </div>
+    <div class="form-group row header">
+      <h1>Volunteer Opportunities</h1>
+      <legend>Find events near you.</legend>
+    </div>
     <form action="volResults.html" id="vForm">
+      <div class="form-group row justify-content-center">
+        <input type="text" class="form-control form-control-lg" id="keywords" placeholder="Enter keywords or phrases">
+      </div>
       <br>
       <div class="form-group row justify-content-center">
-        <div class="col-md-11">
-          <input type="text" class="form-control form-control-lg" id="keywords" placeholder="Enter keywords or phrases">
+        <label for="zip" class="col-xs-2 form-label">Zip Code&nbsp;</label>
+        <div class="col-xs-10">
+          <input type="text" class="form-control" id="zip" aria-describedby="requiredText" maxlength="5" required>
+          <small id="requiredText" class="text-muted">required</small>
+          <div class="invalid-feedback row">Invalid zip code.</div>
         </div>
+
       </div>
-      <br>
-      <div class="alignContainer">
-        <div class="form-group row justify-content-center no-gutters">
-          <label for="zip" class="col-form-label col-md-auto">Zip Code:&nbsp;</label>
-          <div class="col-md-3">
-            <input type="text" class="form-control" id="zip" aria-describedby="requiredText" maxlength="5" required>
-            <small id="requiredText" class="text-muted">required</small>
-            <div class="invalid-feedback row">Invalid zip code.</div>
+      <center><p hidden class="errText" id="zipHelp">Please enter a valid 5-digit numeric zip code.</p></center>
+      <div class="form-group row justify-content-center">
+        <label for="zip" class="col-xs-2 form-label">Find opportunities within&nbsp;</label>
+        <div class="col-xs-2">
+          <input type="text" class="form-control" id="dist" aria-describedby="requiredText" maxlength="5" required>
+          <small id="requiredText" class="text-muted">required</small>
+          <div class="invalid-feedback row">Invalid zip code.</div>
+        </div>
+        <div class="col-xs-2">
+          <p class="form-control-static">&nbsp;miles</p>
+        </div>
+        <center><p hidden class="errText" id="distHelp">Please enter a numeric distance less than 300.</p></center>
+      </div>
+      <div class="form-group row justify-content-center">
+        <label class="col-xs-4">Apply Filters&nbsp;</label>
+        <div class="col-xs-6">
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" value="">Animal Services
+            </label>
           </div>
-          <p hidden class="errText" id="zipHelp">Please enter a valid 5-digit numeric zip code.</p>
-        </div>
-        <div class="form-group row justify-content-center no-gutters">
-          <div class="col-md-6 text-right">
-          <label for="dist" class="col-form-label">Find opportunities within&nbsp;</label>
-        </div>
-          <div class="col-md-4 text-left" id="divDist">
-                <input type="text" class="form-control" id="dist" aria-describedby="requiredText" maxlength="3" required>miles
-                <br><small id="requiredText" class="text-muted">required</small>
-                <div class="invalid-feedback row">Invalid distance.</div>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" value="">Disaster Relief
+            </label>
           </div>
-          <p hidden class="errText" id="distHelp">Please enter a numeric distance less than 300.</p>
-        </div>
-        <br>
-        <div class="form-group row justify-content-center">
-          <label class="col-md-4">Apply Filters</label>
-          <div class="col-md-5">
-            <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" value="">Animal Services
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" value="">Disaster Relief
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" value="">Education
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" value="">Environment
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" value="">Health
-              </label>
-            </div>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" value="">Education
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" value="">Environment
+            </label>
+          </div>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" value="">Health
+            </label>
           </div>
         </div>
       </div>
-      <br>
-      <div class="form-group row justify-content-around">
-        <div class="col-4 text-center">
-        <button type="submit" class="btn btn-outline-primary btn-large" id="clearBtn">Clear</button>
+      <div class="form-row justify-content-around">
+        <div class="col text-center">
+          <button type="button" class="btn btn-info btn-large" id="homeBtn">Home</button>
         </div>
-        <div class="col-4 text-center">
-        <button type="button" class="btn btn-primary btn-large" id="submitBtn">Submit</button>
+        <div class="col text-center">
+          <button type="reset" class="btn btn-outline-primary btn-large" id="clearBtn">Clear</button>
+        </div>
+        <div class="col text-center">
+          <button type="button" class="btn btn-primary btn-large" id="submitBtn">Submit</button>
         </div>
       </div>
-      <br>
     </form>
   </div>
-  <br>
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/volunteerSearch.js"></script>
 </body>
