--- a/volunteerSearch.html
+++ b/volunteerSearch.html
@@ -15,7 +15,7 @@
       <h1>Volunteer Opportunities</h1>
       <legend>Find events near you.</legend>
     </div>
-    <form action="volResults.html" id="vForm">
+    <form action="volResults.html" id="volForm">
       <div class="form-group row justify-content-center">
         <input type="text" class="form-control form-control-lg" id="keywords" placeholder="Enter keywords or phrases">
       </div>
@@ -27,9 +27,8 @@
           <small id="requiredText" class="text-muted">required</small>
           <div class="invalid-feedback row">Invalid zip code.</div>
         </div>
-
       </div>
-      <center><p hidden class="errText" id="zipHelp">Please enter a valid 5-digit numeric zip code.</p></center>
+      <div class="errRow"><p hidden class="errText" id="zipHelp">Please enter a valid 5-digit numeric zip code.</p></div>
       <div class="form-group row justify-content-center">
         <label for="zip" class="col-xs-2 form-label">Find opportunities within&nbsp;</label>
         <div class="col-xs-2">
@@ -40,8 +39,8 @@
         <div class="col-xs-2">
           <p class="form-control-static">&nbsp;miles</p>
         </div>
-        <center><p hidden class="errText" id="distHelp">Please enter a numeric distance less than 300.</p></center>
       </div>
+      <div class="errRow"><p hidden class="errText" id="distHelp">Please enter a numeric distance less than 300.</p></div>
       <div class="form-group row justify-content-center">
         <label class="col-xs-4">Apply Filters&nbsp;</label>
         <div class="col-xs-6">
