added client validation for employer submit fields

--- a/employerSubmit.html
+++ b/employerSubmit.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Submit a Listing</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/employerSubmit.css">
+
 </head>
 <body>
   <div class="container">
@@ -25,18 +27,22 @@
   </div>
   <div class="form-group">
     <label for="listingOrg">Company / Organization</label>
+    <div class="errRow"><p hidden class="errText" id="orgHelp">Please enter your name if you are not posting this for an organization.</p></div>
     <input type="text" class="form-control" id="listingOrg">
   </div>
   <div class="form-group">
     <label for="listingEmail">Email</label>
+    <div class="errRow"><p hidden class="errText" id="emailHelp">Please enter a valid e-mail to receive notifications from interested applicants.</p></div>
     <input type="text" class="form-control" id="listingEmail">
   </div>
   <div class="form-group">
     <label for="listingTitle">Title</label>
+    <div class="errRow"><p hidden class="errText" id="titleHelp">Please enter a title for this listing.</p></div>
     <input type="text" class="form-control" id="listingTitle">
   </div>
   <div class="form-group">
     <label for="listingInfo">Info</label>
+    <div class="errRow"><p hidden class="errText" id="infoHelp">Please share some information about your listing.</p></div>
     <textarea class="form-control" id="listingInfo" rows="5"></textarea>
   </div>
   <div class="form-group">
