--- a/volResults.html
+++ b/volResults.html
@@ -36,12 +36,11 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Volunteer Opportunity 1 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Art Program for Homeless Teens/ Youths Thursday Afternoons </h3>
+             Doors of Change is a nonprofit organization that services and supports homeless youths ages 12-24. 
+             We offer a safe and supportive environment to come and create art through our weekly Thursday Taking Art 
+             to the Streets (TATS) program. TATS facilitates healing and empowerment through the creation of art. www.doorsofchange.org.
+             In addition we offer Social Services, clothing, toiletries, and dinner.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
@@ -58,12 +57,10 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Volunteer Opportunity 2 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Cat Shelter Care </h3>
+                Do you like cats? Do you have time to help out friends in need? If so, we have an opportunity for you!
+                Come to the Humane Pet Society to help out furry friends in need. We are looking for someone who can care
+                for cats as they prep themselves up for a permanent home. Prefer someone with experience handling pets.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
@@ -79,12 +76,11 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Volunteer Opportunity 3 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Adoption Event Coordinator - Offsite Events </h3>
+             Here's an opportunity for an individual or group (i.e. community service sorority or fraternity) looking 
+             for management experience that will look GREAT on a resume' or just someone who wants a great volunteer project!
+             San Diego House Rabbit Society is looking for a group of volunteers to organize off-site shelter rabbit adoption
+             events at pet stores and other locations (book stores, shopping centers, libraries, etc.) throughout San Diego County.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
@@ -100,12 +96,9 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Volunteer Opportunity 4 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Volunteers Needed at HI San Diego Downtown Hostel </h3>
+             Volunteers are needed to lead fun, engaging activities for travelers both in the hostel and in the surrounding community. 
+             Examples include movie nights, game tournaments, walking tours, and so much more! Share your interests with people from around the world.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
@@ -121,12 +114,12 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Volunteer Opportunity 5 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Outreach Volunteers needed in San Diego! </h3>
+             The Soldiers Project (TSP) is seeking friendly, outgoing and engaging individuals to be a part of our Street
+             Outreach Team in San Diego. This position is excellent for anyone passionate about the veteran community and ensuring 
+             access to mental health services. We are looking for people who hold exceptional verbal, communication and interpersonal 
+             skills to assist with building awareness of our program for veterans, service members, family members, and community 
+             organizations.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
