--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   <title>Login</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="css/login.css">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 <body>
   <div class="container">
