--- a/volunteerSearch.html
+++ b/volunteerSearch.html
@@ -34,7 +34,7 @@
         <div class="col-xs-2">
           <input type="text" class="form-control" id="dist" aria-describedby="requiredText" maxlength="3" required>
           <small id="requiredText" class="text-muted">required</small>
-          <div class="invalid-feedback row">Invalid zip code.</div>
+          <div class="invalid-feedback row">Invalid distance.</div>
         </div>
         <div class="col-xs-2">
           <p class="form-control-static">&nbsp;miles</p>
