--- a/jobResults.html
+++ b/jobResults.html
@@ -36,12 +36,12 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Job Opportunity 1 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Welcome Desk Attendant </h3>
+            Welcome Desk Attendants are the face of the San Diego Chinese Historical Museum as the first point of
+            contact for visitors from all over the world. We have three gallery spaces that host rotating art, culture, 
+            and historical exhibits that focus on China and Chinese America. Attendants will be trained in greeting
+            visitors, cash and credit card handling for admission and gift shop sales. Attendants will also facilitate
+            an enjoyable visitor experience to all guests to the Museum.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
@@ -58,12 +58,11 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Job Opportunity 2 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> La Jolla Librarian Assistant </h3>
+             Under administrative leadership, it is the responsibility of part time faculty to perform tasks which support
+             advancement of the visions, missions, and values of the colleges and District. Part time faculty have responsibilities
+             in regards to their classroom assignment, evaluation of students, curriculum, student advising, professional
+             development, and any assignment-specific needs.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
@@ -79,12 +78,12 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Job Opportunity 3 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Lucky Mart Cashier </h3>
+             Do you enjoy leading others by providing an exemplary example and serving as a mentor? Does overseeing a fast paced
+             team in a fast paced environment sound exciting? Do you have a passion for delivering an extraordinary customer service
+             experience while working in a friendly environment? If the thought of helping people make healthy choices in one of the
+             fastest growing retailers is up your alley – then we need YOU to join our winning team at Lucky Mart as a 
+             Head Cashier!
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
@@ -100,12 +99,12 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Job Opportunity 4 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Professional Pet Sitter/Dog walker </h3>
+             Provide the highest quality care for our clients' pets. We have established an extremely prominent and revered place in 
+             the community as professional care givers to pets and our mission is to always maintain our high standards and excellent
+             reputation. We are caring for peoples' pets which are their furry children. They adore their pets and expect us to take 
+             care of them with the same sense of responsibility and commitment that they do. As out company is very well-known, it has 
+             grown and there is much demand for our services. We need more wonderful care givers to help us do our jobs well.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
@@ -121,12 +120,10 @@
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
-             <h3> Job Opportunity 5 </h3>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+             <h3> Caretaker/Housekeeper </h3>
+             The HDW Housekeeping Aide/ Caretaker assists the hospital in achieving a sanitary, clean, and safe environment for
+             the HDW residents, staff, and visitors by providing a variety of cleaning tasks that are in accordance with established
+             hygienic standards.
               <!--More Info -->
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
