first set of hardcoded listings and folders to organize

--- a/volResults.html
+++ b/volResults.html
@@ -13,7 +13,7 @@
       <div class="container">
         <!-- Header-->
         <h1 class ="title"> Volunteer Opportunities Results </h1>
-        <h4> Showing 3 Results </h4>
+        <h4> Showing 5 Results </h4>
       </div>
       <br>
     </center>
@@ -60,10 +60,10 @@
              <h3> Cat Shelter Care </h3>
                 Do you like cats? Do you have time to help out friends in need? If so, we have an opportunity for you!
                 Come to the Humane Pet Society to help out furry friends in need. We are looking for someone who can care
-                for cats as they prep themselves up for a permanent home. Prefer someone with experience handling pets.
+                for cats as they prep themselves up for a permanent home.
               <!--More Info -->
                 <div class="button">
-                  <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
+                  <a button class="btn btn-outline-primary btn-large" href="list/cat.html">More Info</a>
                 <!--Contact -->
                   <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
                 </div>
@@ -71,6 +71,7 @@
           <br>
        </div>
 
+       <br>
        <hr/>
        <div class = "container">
            <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
