added pics and art page

--- a/list/art.html
+++ b/list/art.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Cat Care Shelter at Humane Pet Society</title>
+  <title> Art Program for Homeless Teens</title>
   <link rel="stylesheet" type="text/css" href="../css/volInfo.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--links to jCarousel-->
@@ -17,7 +17,7 @@
     <!--title-->
     <div class="header" id ="Contact">
       <br>
-      <h1 class="text-center">Cat Care Shelter at Humane Pet Society</h1>
+      <h1 class="text-center">Art Program for Homeless Teens at Doors of Change</h1>
       <hr/>
     </div>
     <hr/>
@@ -50,23 +50,21 @@
 
     <!--Info Part-->
     <div class= "w3-card w3-dark-gray w3-round w3-padding-large" style="max-width:500px">
-      <h2>Humane Pet Society</h2>
-      <h6>humanpetsociety@gmail.com
+      <h2>Doors of Change</h2>
+      <h6>DoorsofChange@gmail.com
         <br>9400 Gilman Avenue, La Jolla 92122, CA</h6>
       <p>
-        Do you like cats? Do you have time to help out friends in need? If so, we have an opportunity for you!
-        Come to the Humane Pet Society to help out furry friends in need. We are looking for someone who can care
-        for cats as they prep themselves up for a permanent home. Prefer someone with experience handling pets.
+        Doors of Change is a nonprofit organization that services and supports homeless youths ages 12-24.
+        We offer a safe and supportive environment to come and create art through our weekly Thursday Taking Art to
+        the Streets (TATS) program. TATS facilitates healing and empowerment through the creation of art. www.doorsofchange.org.
+
         <br>
-        <u>Expected Work</u>
+        Volunteers are needed to help set up and assist with our Art lessons from 3:00 pm to 5:00 pm at the Episcopal Church
+        in Ocean Beach and then assist with dinner from 5:00 pm to 6:00 pm. Interaction with the youth is encouraged.
+
         <br>
-        <ul>
-        <li>Assist with feeding, cleaning, and in-kennel enrichment.</li>
-        <li>Shifts available Mon-Fri between 7:30am-6pm. </li>
-        <li>Minimum commitment is one shift every other week.</li>
-        <li>Shifts typically run 2 to 3 hours in length.</li>
-        </ul>
-        <br>
+        Ideally we are looking for volunteers that can commit to one Thursday each month.
+        Please contact Shawn Cross Program Manager.
 
       </p>
     </div>
@@ -75,7 +73,7 @@
 
     <!--Contact Organization!-->
     <div class="links">
-      <a class="contact" href = "../cont/catCont.html">Contact the Organization</a>
+      <a class="contact" href = "../cont/artCont.html">Contact the Organization</a>
       <br>
 
       <!--Back to previous Event Listing!-->
