--- a/volResults.html
+++ b/volResults.html
@@ -33,19 +33,18 @@
     <center>
       <hr/>
        <div class = "container">
-           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+           <img src="images/art.jpg" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
              <h3> Art Program for Homeless Teens/ Youths Thursday Afternoons </h3>
              Doors of Change is a nonprofit organization that services and supports homeless youths ages 12-24.
              We offer a safe and supportive environment to come and create art through our weekly Thursday Taking Art
-             to the Streets (TATS) program. TATS facilitates healing and empowerment through the creation of art. www.doorsofchange.org.
-             In addition we offer Social Services, clothing, toiletries, and dinner.
+             to the Streets (TATS) program.
               <!--More Info -->
                 <div class="button">
-                  <a button class="btn btn-outline-primary btn-large" href="volInfo.html">More Info</a>
+                  <a button class="btn btn-outline-primary btn-large" href="list/art.html">More Info</a>
                 <!--Contact -->
-                  <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
+                  <a button class="btn btn-outline-primary btn-large" href="cont/artCont.html">Contact Organization</a>
                 </div>
           </p>
           <br>
@@ -54,7 +53,7 @@
        <hr/>
 
        <div class = "container">
-           <img src="images/solid-silver-gray-fabric_medium.jpg" width="200px"
+           <img src="images/cat.png" width="200px"
              height="200px" alt="Image Placeholder">
            <p>
              <h3> Cat Shelter Care </h3>
@@ -65,7 +64,7 @@
                 <div class="button">
                   <a button class="btn btn-outline-primary btn-large" href="list/cat.html">More Info</a>
                 <!--Contact -->
-                  <a button class="btn btn-outline-primary btn-large" href="volContact.html">Contact Organization</a>
+                  <a button class="btn btn-outline-primary btn-large" href="cont/catCont.html">Contact Organization</a>
                 </div>
           </p>
           <br>
