Fixed messed up linking for job search

--- a/JobSearch.html
+++ b/JobSearch.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Job Opportunities</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="css/volunteerSearch.css">
+  <link rel="stylesheet" type="text/css" href="css/jobSearch.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
       <h1>Job Opportunities</h1>
       <legend>Find events near you.</legend>
     </div>
-    <form action="volResults.html" id="volForm">
+    <form action="jobResults.html" id="jobForm">
       <div class="form-group row justify-content-center">
         <input type="text" class="form-control form-control-lg" id="keywords" placeholder="Enter keywords or phrases">
       </div>
@@ -75,6 +75,6 @@
     </form>
   </div>
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/volunteerSearch.js"></script>
+  <script type="text/javascript" src="js/jobSearch.js"></script>
 </body>
 </html>
