Finished three job listings

--- a/jobResults.html
+++ b/jobResults.html
@@ -44,9 +44,9 @@
             an enjoyable visitor experience to all guests to the Museum.
               <!--More Info -->
                 <div class="button">
-                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                  <a button class="btn btn-outline-primary btn-large" href="list/job1.html">More Info</a>
                 <!--Contact -->
-                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                  <a button class="btn btn-outline-primary btn-large" href="cont/job1.html">Contact Organization</a>
                 </div>
           </p>
           <br>
@@ -65,9 +65,9 @@
              Head Cashier!
               <!--More Info -->
                 <div class="button">
-                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                  <a button class="btn btn-outline-primary btn-large" href="list/job2.html">More Info</a>
                 <!--Contact -->
-                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                  <a button class="btn btn-outline-primary btn-large" href="cont/job2.html">Contact Organization</a>
                 </div>
           </p>
           <br>
@@ -86,9 +86,9 @@
              grown and there is much demand for our services. We need more wonderful care givers to help us do our jobs well.
               <!--More Info -->
                 <div class="button">
-                  <a button class="btn btn-outline-primary btn-large" href="jobInfo.html">More Info</a>
+                  <a button class="btn btn-outline-primary btn-large" href="list/job3.html">More Info</a>
                 <!--Contact -->
-                  <a button class="btn btn-outline-primary btn-large" href="jobContact.html">Contact Organization</a>
+                  <a button class="btn btn-outline-primary btn-large" href="cont/job3.html">Contact Organization</a>
                 </div>
           </p>
           <br>
