--- a/list/art.html
+++ b/list/art.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" type="text/css" href="../css/volInfo.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--links to jCarousel-->
-  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
-  <script type="text/javascript" src="js/moreInfo.js"></script>
+  <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="../js/jquery.jcarousel.min.js"></script>
+  <script type="text/javascript" src="../js/moreInfo.js"></script>
 </head>
 
 <body>
