--- a/list/rabbit.html
+++ b/list/rabbit.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Cat Care Shelter at Humane Pet Society</title>
+  <title>Rabbit Adoption Center</title>
   <link rel="stylesheet" type="text/css" href="../css/volInfo.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <!--links to jCarousel-->
@@ -17,7 +17,7 @@
     <!--title-->
     <div class="header" id ="Contact">
       <br>
-      <h1 class="text-center">Cat Care Shelter at Humane Pet Society</h1>
+      <h1 class="text-center">Rabbit Shelter at San Diego House Rabbit Society</h1>
       <hr/>
     </div>
     <hr/>
@@ -26,12 +26,12 @@
     <div class="jcarousel-wrapper">
       <div class="jcarousel">
         <ul>
-          <li><img src="images/cute cat 1.jpg" width="600" height="400" alt=""></li>
-          <li><img src="images/cute cat 2.jpg" width="600" height="400" alt=""></li>
-          <li><img src="https://colonyofcommodus.files.wordpress.com/2012/07/1341619539905.jpg" width="600" height="400" alt=""></li>
-          <li><img src="images/cute cat 3.jpg" width="600" height="400" alt=""></li>
-          <li><img src="images/cute cat 4.jpg" width="600" height="400" alt=""></li>
-          <li><img src="images/cute cat 5.jpg" width="600" height="400" alt=""></li>
+          <li><img src="../images/cute cat 1.jpg" width="600" height="400" alt=""></li>
+          <li><img src="../images/cute cat 2.jpg" width="600" height="400" alt=""></li>
+          <li><img src="../https://colonyofcommodus.files.wordpress.com/2012/07/1341619539905.jpg" width="600" height="400" alt=""></li>
+          <li><img src="../images/cute cat 3.jpg" width="600" height="400" alt=""></li>
+          <li><img src="../images/cute cat 4.jpg" width="600" height="400" alt=""></li>
+          <li><img src="../images/cute cat 5.jpg" width="600" height="400" alt=""></li>
         </ul>
       </div>
 
@@ -50,24 +50,16 @@
 
     <!--Info Part-->
     <div class= "w3-card w3-dark-gray w3-round w3-padding-large" style="max-width:500px">
-      <h2>Humane Pet Society</h2>
-      <h6>humanpetsociety@gmail.com
+      <h2>San Diego House Rabbit Society</h2>
+      <h6>SDHRabbitSociety@gmail.com
         <br>9400 Gilman Avenue, La Jolla 92122, CA</h6>
       <p>
-        Do you like cats? Do you have time to help out friends in need? If so, we have an opportunity for you!
-        Come to the Humane Pet Society to help out furry friends in need. We are looking for someone who can care
-        for cats as they prep themselves up for a permanent home. Prefer someone with experience handling pets.
+        Volunteer for Escondido Humane Society with adoptable rabbits in the PETCO adoption program.
+        Volunteering with the rabbits includes cleaning two rabbit cages, changing litterboxes, feeding,
+        exercising and socializing up to three rabbits and talk to the people shopping at Petco about rabbit care.
+        Training and educational materials are provided. Requires approx. 2 hours per day and a long term commitment
+        of one or more days per week. You can go any time the store is open. Five locations available: Poway, Carmel Mtn Ranch, Escondido, San Marcos and Mission Gorge (Friars Rd).
         <br>
-        <u>Expected Work</u>
-        <br>
-        <ul>
-        <li>Assist with feeding, cleaning, and in-kennel enrichment.</li>
-        <li>Shifts available Mon-Fri between 7:30am-6pm. </li>
-        <li>Minimum commitment is one shift every other week.</li>
-        <li>Shifts typically run 2 to 3 hours in length.</li>
-        </ul>
-        <br>
-
       </p>
     </div>
     <hr/>
@@ -75,7 +67,7 @@
 
     <!--Contact Organization!-->
     <div class="links">
-      <a class="contact" href = "../cont/catCont.html">Contact the Organization</a>
+      <a class="contact" href = "../cont/rabCont.html">Contact the Organization</a>
       <br>
 
       <!--Back to previous Event Listing!-->
